--- a/docs/governance/committees.mdx
+++ b/docs/governance/committees.mdx
@@ -11,21 +11,23 @@ slug: /governance/committees
 import useBaseUrl from '@docusaurus/useBaseUrl'
 
 Committees are a necessary part of performing key operations, regulating standards, and coming to a
-consensus on changes to the Network.
+consensus on changes to the Helium Network.
 
-Committees are often established through HIPs or out of rough consensus from a common sense need.
-
-Today, the Helium Community utilizes one Committee, the Manufacturing Compliance Committee.
+Committees are often established through [Helium Improvement Proposals][hip] ("HIPs") or out of
+rough consensus from a common sense need.
 
 ---
 
-## Manufacturing Compliance Committee (MCC)
+## Manufacturing Compliance Committee
 
-**Origin:** The MCC was established by
-[HIP 19](https://github.com/helium/HIP/blob/main/0019-third-party-manufacturers.md).
+Today, the Helium Community utilizes one Committee, the Manufacturing Compliance Committee ("MCC").
 
-**Purpose:** The MCC sets basic technical, security, and ethical standards & verifies that these
-standards are met by manufacturers joining the Helium Network through the HIP19 process.
+The MCC was established by [HIP-19][hip-19] with the purpose to set basic technical, security, and
+ethical standards & verifies those standards are met by Hotspot Makers joining the Helium Network
+through the HIP-19[hip-19] process.
 
-You can find more information about the MCC, Ethics for Makers/Manufacturers, and more
-[here](/hotspot-makers/compliance-committee).
+You can find more information about the MCC, Ethics for Makers/Manufacturers, and more [here][mcc].
+
+[hip-19]: https://github.com/helium/HIP/blob/main/0019-third-party-manufacturers.md
+[mcc]: /hotspot-makers/compliance-committee
+[hip]: /hip
