--- a/docs/governance/hip.mdx
+++ b/docs/governance/hip.mdx
@@ -13,6 +13,16 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 Helium Improvement Proposals ("HIPs") are the core unit of change in the Helium Network and for the
 Helium Community.
 
+Best practice for new HIPs is to vet an idea with the Helium community [via Discord][discord] in the
+[hip-discussion][discord-hip] channel.
+
+Discussion with other Community members is a great place to gather initial feedback for an idea and
+learn from previous discussions.
+
+All HIPs are managed entirely from the [HIP GitHub repository][github-hip] and are discussed in the
+`Helium Improvement Proposal` channels of [Helium Discord][discord]. All members of the Helium
+Community are encouraged to create HIPs and participate in the governance process.
+
 ---
 
 ## How an Idea Becomes a HIP
@@ -20,8 +30,8 @@ Helium Community.
 1. **Idea Stage:** HIPs start as ideas for improving an aspect of economic, technical, or
    meta-governance.
 2. **Drafting Stage:** Generally, when enough community members believe the idea is worth
-   formulating into a HIP, they do so and submit that HIP as a draft to the Helium
-   [HIP Repository](https://github.com/helium/hip).
+   formulating into a HIP, they do so and submit that HIP as a draft to the Helium [HIP
+   Repository][hip-repo].
 3. **Editing Stage:** HIP Editors assist HIP Authors in clarity, consistency, and completeness. HIP
    Editors work directly with authors, but everyone is able to provide feedback before the HIP moves
    forward. Sometimes, a HIP is never fully complete and in that case, does not move beyond the
@@ -42,7 +52,7 @@ Helium Community.
 
 ---
 
-## Implemented HIPs
+## Implemented Proposals
 
 All HIPs that have passed and been implemented in the Helium Community are listed below. Not all
 HIPs pass super-majority voting, so you will see some changes in HIP numbers as you go down this
@@ -50,42 +60,76 @@ list. Just like bills that become law, HIPs often amend each other. To get a ful
 how HIPs have been implemented and how each impacts another, join the Helium Discord. Long-time
 Community Members are a wealth of knowledge and can help folks understand changes over time.
 
-Note: the current status of HIPs 'In Discussion', 'Closed', or that are being actively deployed can
-be found at www.github.com/helium/hip
+Note: the current status of all HIPs can be found at [www.github.com/helium/hip][hip-repo]
 
-<!-- prettier-ignore -->
-| ID | Title | Status |
-| -- | ----- | ------ |
-| 1  | [Longfi and LoRaWAN](https://github.com/helium/HIP/blob/main/0001-longfi-and-lorawan.md) | Deployed |
-| 2  | [Sign miner](https://github.com/helium/HIP/blob/main/0002-sign-miner.md) | Deployed |
-| 4  | [Expensing Data Credits for LoRaWAN Traffic](https://github.com/helium/HIP/blob/main/0004-expensing-data-credits-for-lorawan.md) | Deployed |
-| 7  | [Process for managing Helium Improvement Proposals](https://github.com/helium/HIP/blob/main/0007-managing-hip-process.md) | [Approved](https://github.com/helium/HIP/issues/26) |
-| 10 | [Proportional reward scheme for data transfers](https://github.com/helium/HIP/blob/main/0010-usage-based-data-transfer-rewards.md) | Deployed |
-| 12 | [Remote location assertion](https://github.com/helium/HIP/blob/main/0012-remote-location-assert.md) | [Deployed](https://github.com/helium/HIP/issues/39) ([audit](https://github.com/helium/miner/blob/master/audit/var-59.md) / [txn](https://explorer.helium.com/txns/B6SddkhG_OgayRYLfumkIUho1OpDYnqyzAA8Tkf0xzs)) |
-| 13 | [Transfer hotspot](https://github.com/helium/HIP/blob/main/0013-transfer-hotspot.md) | [Deployed](https://github.com/helium/HIP/issues/43) ([audit](https://github.com/helium/miner/blob/master/audit/var-48.md) / [txn](https://explorer.helium.com/txns/DywtCExrXhTxv8VoDZl_hJDjQ2PUcov_AYrW98ZPpcg)) |
-| 15 | [Beaconing Rewards](https://github.com/helium/HIP/blob/main/0015-beaconing-rewards.md) | [Deployed](https://github.com/helium/blockchain-core/pull/662) ([audit](https://github.com/helium/miner/blob/master/audit/var-50.md) / [txn](https://explorer.helium.com/txns/vnEqwbKtFfFxXgYI_9L5Th0LRVkpJlsX-sQzZTh2VwY)) |
-| 16 | [Remove Score from Consensus Group Elections](https://github.com/helium/HIP/blob/main/0016-random-consensus-group-election.md) | [Deployed](https://github.com/helium/HIP/issues/55) ([audit](https://github.com/helium/miner/blob/master/audit/var-48.md) / [txn](https://explorer.helium.com/txns/DywtCExrXhTxv8VoDZl_hJDjQ2PUcov_AYrW98ZPpcg)) |
-| 17 | [Hex Density-based Transmit Reward Scaling](https://github.com/helium/HIP/blob/main/0017-hex-density-based-transmit-reward-scaling.md) | [Deployed](https://github.com/helium/blockchain-core/pull/677) ([audit](https://github.com/helium/miner/blob/master/audit/var-50.md) / [txn](https://explorer.helium.com/txns/vnEqwbKtFfFxXgYI_9L5Th0LRVkpJlsX-sQzZTh2VwY)) |
-| 19 | [Approval Process For Third-Party Manufacturers](https://github.com/helium/HIP/blob/main/0019-third-party-manufacturers.md) | [Deployed](https://github.com/helium/HIP/issues/87) |
-| 20 | [HNT Max Supply](https://github.com/helium/HIP/blob/main/0020-hnt-max-supply.md) | [Deployed](https://github.com/helium/HIP/issues/73) ([audit](https://github.com/helium/miner/blob/master/audit/var-79.md)) |
-| 25 | [Validators](https://github.com/helium/HIP/blob/main/0025-validators.md) | [Deployed](https://github.com/helium/HIP/issues/111) ([audit](https://github.com/helium/miner/blob/master/audit/var-70.md)) |
-| 27 | [Support CBRS 5G](https://github.com/helium/HIP/blob/main/0027-cbrs-5g-support.md) | [Approved](https://github.com/helium/HIP/pull/133) |
-| 28 | [Consensus Reward Adjustments](https://github.com/helium/HIP/blob/main/0028-consensus-reward-adjustments.md) | [Deployed](https://github.com/helium/HIP/issues/140) ([audit](https://github.com/helium/miner/blob/master/audit/var-84.md) / [txn](https://explorer.helium.com/txns/siOPX2IFSh9ey2U0X18BiDsPJHrgxQ0_YKleY4Vyew4)) |
-| 29 | [Multi-signature Keys](https://github.com/helium/HIP/blob/main/0029-multisignature-keys.md) | [Deployed](https://github.com/helium/HIP/issues/157) ([commit](https://github.com/helium/miner/commit/b038f24c8ea801c2062644c7cd682832919b25b0)) |
-| 30 | [BLS12-381 for Threshold Cryptography](https://github.com/helium/HIP/blob/main/0030-update-threshold-cryptography.md) | [Deployed](https://github.com/helium/HIP/issues/158) ([commit](https://github.com/helium/miner/commit/b038f24c8ea801c2062644c7cd682832919b25b0)) |
-| 46 | [LoRaWAN NetID Routing](https://github.com/helium/HIP/blob/main/0046-lorawan-netid-routing.md) | [Approved](https://github.com/helium/HIP/issues/312) |
-| 47 | [Increase DKG Failure Penalty](https://github.com/helium/HIP/blob/main/0047-increase-dkg-penalty.md) | [Approved](https://github.com/helium/HIP/issues/313) |
-| 51 | [Helium DAO](https://github.com/helium/HIP/blob/main/0051-helium-dao.md) | [Approved](https://github.com/helium/HIP/issues/336) |
-| 52 | [IoT subDAO](https://github.com/helium/HIP/blob/main/0052-iot-dao.md) | [Approved](https://github.com/helium/HIP/issues/338) |
-| 53 | [Mobile subDAO](https://github.com/helium/HIP/blob/main/0053-mobile-dao.md) | [Approved](https://github.com/helium/HIP/issues/345) |
-| 55 | [Validator Challenges](https://github.com/helium/HIP/blob/main/0055-validator-challenges.md) | [Approved](https://github.com/helium/HIP/issues/362) |
-| 56 | [Improved State Channel Disputes](https://github.com/helium/HIP/blob/main/0056-state-channel-dispute-strategy.md) | [Approved](https://github.com/helium/HIP/issues/369) |
-| 58 | [PoC Distance Limit](https://github.com/helium/HIP/blob/main/0058-poc-distance-limit.md) | [Approved](https://github.com/helium/HIP/issues/384) |
-| 59 | [Reduce XOR filter fees](https://github.com/helium/HIP/blob/main/0059-reduce-xor-filter-fees.md) | [Approved](https://github.com/helium/HIP/issues/391) |
-| 67 | [Repeal Redenomination](https://github.com/helium/HIP/blob/main/0067-repeal-redenomination.md) | [Approved](https://github.com/helium/HIP/issues/456) |
-| 70 | [Scaling the Helium Network](https://github.com/helium/HIP/blob/main/0070-scaling-helium.md) | [Approved](https://github.com/helium/HIP/issues/471) |
-| 73 | [Consensus Deselection Weighting](https://github.com/helium/HIP/blob/main/0073-consensus-deselection-history-weight.md) | [Deployed (audit/txn)](https://github.com/helium/HIP/issues/491) |
-| 74 | [Mobile PoC - Modeled Coverage Rewards](https://github.com/helium/HIP/blob/main/0074-mobile-poc-modeled-coverage-rewards.md) | [Approved](https://github.com/helium/HIP/issues/504) |
-| 75 | [Initiate Programmatic PoC Emissions with an Updated Emissions Curve](https://github.com/helium/HIP/blob/main/0075-mobile-poc-initiate-programmatic-minting-and-updated-emissions-curve.md) | [Approved](https://github.com/helium/HIP/issues/526) |
-| 76 | [Simplify Lockup Curve and veTokens](https://github.com/helium/HIP/blob/main/0076-linear-lockup-curve.md) | [Approved](https://github.com/helium/HIP/issues/560) |
-| 77 | [Launch Parameters for Solana Migration](https://github.com/helium/HIP/blob/main/0077-solana-parameters.md) | [Approved](https://github.com/helium/HIP/issues/573) |
+| ID  | Title                                                                         | Status                                                               |
+| --- | ----------------------------------------------------------------------------- | -------------------------------------------------------------------- |
+| 1   | [Longfi and LoRaWAN][hip-1]                                                   | <img src="https://img.shields.io/badge/Status-Deployed-blue"></img>  |
+| 2   | [Sign miner][hip-2]                                                           | <img src="https://img.shields.io/badge/Status-Deployed-blue"></img>  |
+| 4   | [Expensing Data Credits for LoRaWAN Traffic][hip-4]                           | <img src="https://img.shields.io/badge/Status-Deployed-blue"></img>  |
+| 7   | [Process for managing Helium Improvement Proposals][hip-7]                    | <img src="https://img.shields.io/badge/Status-Approved-green"></img> |
+| 10  | [Proportional reward scheme for data transfers][hip-10]                       | <img src="https://img.shields.io/badge/Status-Deployed-blue"></img>  |
+| 12  | [Remote location assertion][hip-12]                                           | <img src="https://img.shields.io/badge/Status-Deployed-blue"></img>  |
+| 13  | [Transfer hotspot][hip-13]                                                    | <img src="https://img.shields.io/badge/Status-Deployed-blue"></img>  |
+| 15  | [Beaconing Rewards][hip-15]                                                   | <img src="https://img.shields.io/badge/Status-Deployed-blue"></img>  |
+| 16  | [Remove Score from Consensus Group Elections][hip-16]                         | <img src="https://img.shields.io/badge/Status-Deployed-blue"></img>  |
+| 17  | [Hex Density-based Transmit Reward Scaling][hip-17]                           | <img src="https://img.shields.io/badge/Status-Deployed-blue"></img>  |
+| 19  | [Approval Process For Third-Party Manufacturers][hip-19]                      | <img src="https://img.shields.io/badge/Status-Deployed-blue"></img>  |
+| 20  | [HNT Max Supply][hip-20]                                                      | <img src="https://img.shields.io/badge/Status-Deployed-blue"></img>  |
+| 25  | [Validators][hip-25]                                                          | <img src="https://img.shields.io/badge/Status-Deployed-blue"></img>  |
+| 27  | [Support CBRS 5G][hip-27]                                                     | <img src="https://img.shields.io/badge/Status-Approved-green"></img> |
+| 28  | [Consensus Reward Adjustments][hip-28]                                        | <img src="https://img.shields.io/badge/Status-Deployed-blue"></img>  |
+| 29  | [Multi-signature Keys][hip-29]                                                | <img src="https://img.shields.io/badge/Status-Deployed-blue"></img>  |
+| 30  | [BLS12-381 for Threshold Cryptography][hip-30]                                | <img src="https://img.shields.io/badge/Status-Deployed-blue"></img>  |
+| 46  | [LoRaWAN NetID Routing][hip-46]                                               | <img src="https://img.shields.io/badge/Status-Approved-green"></img> |
+| 47  | [Increase DKG Failure Penalty][hip-47]                                        | <img src="https://img.shields.io/badge/Status-Approved-green"></img> |
+| 51  | [Helium DAO][hip-51]                                                          | <img src="https://img.shields.io/badge/Status-Approved-green"></img> |
+| 52  | [IoT subDAO][hip-52]                                                          | <img src="https://img.shields.io/badge/Status-Approved-green"></img> |
+| 53  | [Mobile subDAO][hip-53]                                                       | <img src="https://img.shields.io/badge/Status-Approved-green"></img> |
+| 55  | [Validator Challenges][hip-55]                                                | <img src="https://img.shields.io/badge/Status-Approved-green"></img> |
+| 56  | [Improved State Channel Disputes][hip-56]                                     | <img src="https://img.shields.io/badge/Status-Approved-green"></img> |
+| 58  | [PoC Distance Limit][hip-58]                                                  | <img src="https://img.shields.io/badge/Status-Approved-green"></img> |
+| 59  | [Reduce XOR filter fees][hip-59]                                              | <img src="https://img.shields.io/badge/Status-Approved-green"></img> |
+| 67  | [Repeal Redenomination][hip-67]                                               | <img src="https://img.shields.io/badge/Status-Approved-green"></img> |
+| 70  | [Scaling the Helium Network][hip-70]                                          | <img src="https://img.shields.io/badge/Status-Approved-green"></img> |
+| 73  | [Consensus Deselection Weighting][hip-73]                                     | <img src="https://img.shields.io/badge/Status-Deployed-blue"></img>  |
+| 74  | [Mobile PoC - Modeled Coverage Rewards][hip-74]                               | <img src="https://img.shields.io/badge/Status-Approved-green"></img> |
+| 75  | [Initiate Programmatic PoC Emissions with an Updated Emissions Curve][hip-75] | <img src="https://img.shields.io/badge/Status-Approved-green"></img> |
+| 76  | [Simplify Lockup Curve and veTokens][hip-76]                                  | <img src="https://img.shields.io/badge/Status-Approved-green"></img> |
+| 77  | [Launch Parameters for Solana Migration][hip-77]                              | <img src="https://img.shields.io/badge/Status-Approved-green"></img> |
+
+[hip-repo]: https://github.com/helium/hip
+[hip-1]: https://github.com/helium/HIP/blob/main/0001-longfi-and-lorawan.md
+[hip-2]: https://github.com/helium/HIP/blob/main/0002-sign-miner.md
+[hip-4]: https://github.com/helium/HIP/blob/main/0004-expensing-data-credits-for-lorawan.md
+[hip-7]: https://github.com/helium/HIP/blob/main/0007-managing-hip-process.md
+[hip-10]: https://github.com/helium/HIP/blob/main/0010-usage-based-data-transfer-rewards.md
+[hip-12]: https://github.com/helium/HIP/blob/main/0012-remote-location-assert.md
+[hip-13]: https://github.com/helium/HIP/blob/main/0013-transfer-hotspot.md
+[hip-15]: https://github.com/helium/HIP/blob/main/0015-beaconing-rewards.md
+[hip-16]: https://github.com/helium/HIP/blob/main/0016-random-consensus-group-election.md
+[hip-17]: https://github.com/helium/HIP/blob/main/0017-hex-density-based-transmit-reward-scaling.md
+[hip-19]: https://github.com/helium/HIP/blob/main/0019-third-party-manufacturers.md
+[hip-20]: https://github.com/helium/HIP/blob/main/0020-hnt-max-supply.md
+[hip-25]: https://github.com/helium/HIP/blob/main/0025-validators.md
+[hip-27]: https://github.com/helium/HIP/blob/main/0027-cbrs-5g-support.md
+[hip-28]: https://github.com/helium/HIP/blob/main/0028-consensus-reward-adjustments.md
+[hip-29]: https://github.com/helium/HIP/blob/main/0029-multisignature-keys.md
+[hip-30]: https://github.com/helium/HIP/blob/main/0030-update-threshold-cryptography.md
+[hip-46]: https://github.com/helium/HIP/blob/main/0046-lorawan-netid-routing.md
+[hip-47]: https://github.com/helium/HIP/blob/main/0047-increase-dkg-penalty.md
+[hip-51]: https://github.com/helium/HIP/blob/main/0051-helium-dao.md
+[hip-52]: https://github.com/helium/HIP/blob/main/0052-iot-dao.md
+[hip-53]: https://github.com/helium/HIP/blob/main/0053-mobile-dao.md
+[hip-55]: https://github.com/helium/HIP/blob/main/0055-validator-challenges.md
+[hip-56]: https://github.com/helium/HIP/blob/main/0056-state-channel-dispute-strategy.md
+[hip-58]: https://github.com/helium/HIP/blob/main/0058-poc-distance-limit.md
+[hip-59]: https://github.com/helium/HIP/blob/main/0059-reduce-xor-filter-fees.md
+[hip-67]: https://github.com/helium/HIP/blob/main/0067-repeal-redenomination.md
+[hip-70]: https://github.com/helium/HIP/blob/main/0070-scaling-helium.md
+[hip-73]: https://github.com/helium/HIP/blob/main/0073-consensus-deselection-history-weight.md
+[hip-74]: https://github.com/helium/HIP/blob/main/0074-mobile-poc-modeled-coverage-rewards.md
+[hip-75]:
+  https://github.com/helium/HIP/blob/main/0075-mobile-poc-initiate-programmatic-minting-and-updated-emissions-curve.md
+[hip-76]: https://github.com/helium/HIP/blob/main/0076-linear-lockup-curve.md
+[hip-77]: https://github.com/helium/HIP/blob/main/0077-solana-parameters.md
