--- a/docs/network-iot/open-lns.mdx
+++ b/docs/network-iot/open-lns.mdx
@@ -1,22 +1,22 @@
 ---
 id: open-lns
-title: Open LNS Overview
-pagination_label: Open LNS
-sidebar_label: Open LNS
-description: Helium Open LNS Documentation
+title: OpenLNS Overview
+pagination_label: OpenLNS
+sidebar_label: OpenLNS
+description: Helium OpenLNS Documentation
 image: https://docs.helium.com/img/link-image.png
 slug: /iot/open-lns
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
 
-The Open LNS initiative allows anyone looking to deploy devices on the Helium Network to use any
-LoRaWAN Network Server (LNS). The LNS you choose must compile with the LoRaWAN specification to
+The OpenLNS Initiative allows anyone looking to deploy devices on the Helium Network to use any
+LoRaWAN Network Server (LNS). The LNS you choose must comply with the LoRaWAN specification to
 access the Helium Network.
 
-## Why Open LNS?
+## Why OpenLNS?
 
-Open LNS will deliver the following network improvements:
+OpenLNS will deliver the following Network improvements:
 
 1. Increased accessibility
 2. Accelerated device joins and a focus on increased speed
@@ -27,11 +27,11 @@ Open LNS will deliver the following network improvements:
 
 ## Console & LNS Migration
 
-The Open LNS Initiative is unaffected by the migration to Solana. LNS Operators and Console Users
+The OpenLNS Initiative is unaffected by the migration to Solana. LNS Operators and Console Users
 will have months to migrate their LNS services.
 
-Open LNS allows devices on the Helium Network to use any LoRaWAN Network Server ("LNS") that
-complies with the LoRaWAN specification.
+OpenLNS allows devices on the Helium Network to use any LoRaWAN Network Server (LNS) that complies
+with the LoRaWAN specification.
 
 <!-- TODO: what is an LNS -->
 <!-- - The LoRaWAN Network Server is the brain and the controller of a LoRaWAN network. -->
@@ -41,40 +41,40 @@ complies with the LoRaWAN specification.
 
 ## Network Improvements
 
-Before Open LNS, Helium LoRaWAN Network Servers ran on bespoke software especially suited to the
-Helium Blockchain. Through Helium HIP-70, these constraints were removed, allowing for a multitude
-of simplifications and improvements.
+Before OpenLNS, Helium LoRaWAN Network Servers ran on bespoke software especially suited to the
+Helium blockchain. Through [HIP-70](https://github.com/helium/HIP/issues/471), these constraints
+were removed, allowing for a multitude of simplifications and improvements.
 
-**Increased Accessibility:** <br/> Open LNS alleviates the usage and access bottlenecks that stem
-from "Helium Console" as the only LNS option and instead scales network access through a large and
+**Increased Accessibility:** <br/> OpenLNS alleviates the usage and access bottlenecks that stem
+from "Helium Console" as the only LNS option and instead scales Network access through a large and
 diverse set of LNS providers and software suites.
 
-**Accelerated Device Joins:** <br/> The re-engineered backend architecture removes the need to store
-device routing information on the Helium blockchain, dramatically reducing device join time.
+**Accelerated Device Joins:** <br/> The re-engineered back-end architecture removes the need to
+store device routing information on the Helium blockchain, dramatically reducing device join time.
 
-**Increased Reliability:** <br/> By colocating in the same global regions as deployed Hotspots,
+**Increased Reliability:** <br/> By collocating in the same global regions as deployed Hotspots,
 additional Oracles can support future demand, reduce latency, and increase redundancy.
 
 **Enable Massive Scalability:** <br/> The upgraded architecture allows for new device classes and
-innovative use cases, with new LoRaWAN infrastructure allowing IoT providers to utilize whichever
-LNS they prefer based on features and capabilities.
+innovative use cases, with new LoRaWAN infrastructure allowing IoT solution providers to utilize
+whichever LNS they prefer based on features and capabilities.
 
 ---
 
-## Open LNS FAQ
+## OpenLNS FAQ
 
 ### Why Are These Changes Necessary?
 
 In the current architecture, Helium Console is a blockchain-following node. This blockchain
 dependency adds cost and complexity and can cause speed and efficiency issues, including device
 joins delays and slow, delayed, or dropped packet communications. In addition, the current
-architecture limits the scalability to handle future network growth. IoT solution providers can only
+architecture limits the scalability to handle future Network growth. IoT solution providers can only
 access part of the catalog of LoRaWAN-capable devices, and there are limited options regarding how
 these devices onboard to the Helium Network.
 
-Moving data transfer to [Oracles][oracles] will eliminate the need for data transfer accounting
+Moving Data transfer to [Oracles][oracles] will eliminate the need for Data Transfer Accounting
 dependent on the blockchain and other chain-following entities, eliminates the issues noted above
-while enabling data transfer to massively scale, and removes the fear of chain halts affecting the
+while enabling Data transfer to massively scale, and removes the fear of chain halts affecting the
 underlying Network.
 
 <figure>
@@ -82,15 +82,15 @@ underlying Network.
   <figcaption>Simplified block diagram of Data Transfer Accounting.</figcaption>
 </figure>
 
-### How Would Open LNS Provide More Access To The Network?
+### How Would OpenLNS Provide More Access To The Network?
 
-Open LNS allows partners in the ecosystem to use any LNS that complies with the LoRaWAN
-specification to access the Helium Network.
+OpenLNS allows partners in the Ecosystem to use any LNS that complies with the LoRaWAN specification
+to access the Helium Network.
 
 :::note New Capabilities.
 
-The Helium Console does not support standard LoRaWAN features such as ABP activation or Class C
-devices. Open LNS allows users to choose a different LNS, such as Chirpstack to address these
+The Helium Console does not support standard LoRaWAN features such as ABP activation or Class C end
+devices. OpenLNS allows users to choose a different LNS, such as ChirpStack to address these
 limitations.
 
 :::
@@ -100,27 +100,27 @@ Reimagining this landscape of LNS providers offers users a new level of freedom 
 ### What Is The Current Progress And Future Timeline?
 
 Alpha testing began in October 2022. After a successful initial alpha period, a larger group of
-partners in the ecosystem are participating in the ongoing beta test and are seeing positive
-evidence that ABP and Class C devices will be fully functional on the Helium Network.
+partners in the Ecosystem are participating in the ongoing beta test and are seeing positive
+evidence that ABP and Class C end devices will be fully functional on the Helium Network.
 
 Testing will continue through the start of 2023.
 
-### Which Open LNS Providers Can I Use?
+### Which OpenLNS Providers Can I Use?
 
-The first batch of providers within the Open LNS initiative utilizes [Chirpstack][chirpstack] and
+The first batch of providers within the OpenLNS Initiative utilizes [ChirpStack][ChirpStack] and
 offers multi-tenant and private instances to businesses and individuals.
 
 - [IngeniousThings][ingeniousthings] provides LNS services, including public device hosting using a
   pay-per-message model and private LNS instances using a pay-per-month model. IngeniousThings has
-  been involved in LoRaWAN since 2016 and was an early contributor to the Helium ecosystem as one of
+  been involved in LoRaWAN since 2016 and was an early contributor to the Helium Ecosystem as one of
   the first public Helium Console hosts. IngeniousThings currently supports over 7,000 devices on
-  its [Helium IoT][helium-iot] console and will offer a variety of features and services to help
+  its [Helium IoT][helium-iot] Console and will offer a variety of features and services to help
   Helium users.
 - [Parley Labs][parley-labs] provides Helium products and services and supports growth. Parley Labs
   plans to offer both public and private LNS hosting services. Parley Labs was a pioneer in the
-  Helium ecosystem, providing pre-provisioned products, demonstrating Class C device functionality,
-  and assisting clients in bringing their solutions to market. Parley Labs' services include
-  sourcing, procurement, provisioning, logistics, integrations, and engineering.
+  Helium Ecosystem, providing pre-provisioned products, demonstrating Class C end device
+  functionality, and assisting clients in bringing their solutions to market. Parley Labs' services
+  include sourcing, procurement, provisioning, logistics, integrations, and engineering.
 - [Brdot][brdot] emerged in 2021 as the ultimate solution provider for Helium across Latin America
   and has since then been offering comprehensive services and coverage as a reseller for the finest
   Helium gateways available, certified by Anatel. Our expertise brings users an extensive range of
@@ -128,7 +128,7 @@ offers multi-tenant and private instances to businesses and individuals.
   require private or public LNS service utilizing a pay-per-message or pay-per-month basis, BrDot
   has you covered.
 
-[chirpstack]: https://www.chirpstack.io/
+[ChirpStack]: https://www.chirpstack.io/
 [ingeniousthings]: https://www.ingeniousthings.fr/
 [helium-iot]: https://www.helium-iot.eu/
 [parley-labs]: https://parleylabs.com/
