--- a/docs/use-the-network/devices/ready-to-use/decentlab/dl-dlr2-010.mdx
+++ b/docs/use-the-network/devices/ready-to-use/decentlab/dl-dlr2-010.mdx
@@ -1,9 +1,9 @@
 ---
 id: dl-dlr2-010
-title: Dl-Dlr2-010
-pagination_label: Dl Dlr2 010
-sidebar_label: Dl-Dlr2-010
-description: Dual Pulse Counter Dry Contact Transmitter For LoRaWAN
+title: DL-DLR2-010
+pagination_label: DL-DLR2-010
+sidebar_label: DL-DLR2-010
+description: Dual Pulse Counter Dry Contact Transmitter for LoRaWAN
 image: img/use-the-network/devices/ready-to-use/decentlab/dl-dlr2.jpg
 slug: /use-the-network/devices/ready-to-use/decentlab/dl-dlr2-010
 ---
@@ -12,7 +12,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 ## DL-DLR2-010
 
-Dual Pulse Counter Dry Contact Transmitter for LoRaWAN
+Dual Pulse Counter Dry Contact Transmitter for LoRaWAN.
 
 <img src={useBaseUrl('img/use-the-network/devices/ready-to-use/decentlab/dl-dlr2.jpg')} />
 
@@ -36,11 +36,11 @@ Dual Pulse Counter Dry Contact Transmitter for LoRaWAN
 
 #### Weight:
 
-- 400 grams
+- 400 grams (including batteries)
 
 #### Battery:
 
-- type: 2 C alkaline
+- type: 2x C alkaline (LR14)
 - replaceable: True
 
 ---
