--- a/docs/use-the-network/devices/ready-to-use/decentlab/dl-ds18.mdx
+++ b/docs/use-the-network/devices/ready-to-use/decentlab/dl-ds18.mdx
@@ -30,17 +30,22 @@ Temperature Sensor for LoRaWAN
 
 #### Dimensions:
 
+Device:
 - width: 81 mm
 - length: 135 mm
 - height: 70 mm
 
+Sensor head:
+- diameter: 7 mm
+- length: 40 mm
+
 #### Weight:
 
-- 500 grams
+- 500 grams (including batteries and sensor)
 
 #### Battery:
 
-- type: 2 C alkaline
+- type: 2x C alkaline (LR14)
 - replaceable: True
 
 ---
