--- a/docs/use-the-network/devices/ready-to-use/aquascope/bvs.mdx
+++ b/docs/use-the-network/devices/ready-to-use/aquascope/bvs.mdx
@@ -25,6 +25,9 @@ Retrofittable Motor Actuator to operate Ball Valves
 
 ### Specifications
 
+#### LoRaWAN device type:
+- Class C end-device
+
 #### Sensors:
 
 - temperature
