--- a/docs/use-the-network/devices/ready-to-use/aquascope/wwd.mdx
+++ b/docs/use-the-network/devices/ready-to-use/aquascope/wwd.mdx
@@ -25,6 +25,9 @@ Waterproof Flood Sensor with additional sensor pad
 
 ### Specifications
 
+#### LoRaWAN device type:
+- Class C end-device
+
 #### Sensors:
 
 - temperature
